saves temporary weights more often

--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "'3.6.3 |Anaconda, Inc.| (default, Oct 13 2017, 12:02:49) \\n[GCC 7.2.0]'"
+       "'3.6.3 |Anaconda custom (64-bit)| (default, Oct 13 2017, 12:02:49) \\n[GCC 7.2.0]'"
       ]
      },
      "execution_count": 2,
@@ -148,10 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "TRANSFORM = transforms.Compose(\n",
@@ -169,7 +167,7 @@
     "ROAD_LABELS = [1,2,7,8,9,10]#remove 8,9,10 to only keep the road\n",
     "# WARNING does not change lowest_non_road_color yet\n",
     "\n",
-    "ROOT = '../dlcv1718/mnt/disks/sdb1/cityscapes/'\n",
+    "ROOT = '/mnt/disks/sdb1/cityscapes/'\n",
     "LI8B = 'leftImg8bit/'\n",
     "GT = 'gtFine/'\n",
     "DATA_TRAIN = MyImageFolder(root1=ROOT+LI8B+'train', root2=ROOT+GT+'train_lido' , transform = TRANSFORM, target_transform= TARGET_TRANSFORM)\n",
@@ -276,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +308,7 @@
     "NB_VAL=len(DATA_VAL)\n",
     "NB_TEST=len(DATA_TEST)\n",
     "\n",
-    "WEIGHTS_PATH = \"dlcv_weight34.pth\"\n",
+    "WEIGHTS_PATH = \"w34s32w128.pth\"\n",
     "# where the weights are saved in the end, for further reuse\n",
     "\n",
     "BATCH_SIZE = 1\n",
@@ -326,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -341,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -366,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No pretrained weights found at:dlcv_weight34.pth\n"
+      "No pretrained weights found at:w34s32w128.pth\n"
      ]
     }
    ],
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -403,12 +401,8 @@
      "output_type": "stream",
      "text": [
       "Start training\n",
-      "Slice width: 02048\tStride: 00032 \tNumber of Slices: 00063\n",
-      "The average loss of epoch  1  is  0.3740514303561321\n",
-      "Slice width:  02048 Number of Slices:  00063\n",
-      "The average validation loss is  0.2623806519998177\n",
-      "The average correctness of the validation data is  80.55204049 %\n",
-      "End training\n"
+      "Slice width:  2048\tStride:    32 \tNumber of Slices:    61\n",
+      "[1,  5120] loss: 0.61218\r"
      ]
     }
    ],
@@ -420,7 +414,7 @@
     "LAST_VAL_LOSS=10\n",
     "#EPOCH=0\n",
     "WIDTH=2048\n",
-    "SLICE_WIDTH=64\n",
+    "SLICE_WIDTH=128\n",
     "STRIDE=32\n",
     "NUM_SLICES = (WIDTH - SLICE_WIDTH)//STRIDE +1    #added   \"Integer Division\"\n",
     "PRINT_FREQUENCY=1024  \n",
@@ -465,6 +459,7 @@
     "                      (epoch+1, numsample, running_loss / PRINT_FREQUENCY),\n",
     "                     end='\\r', flush=True)\n",
     "                running_loss = 0.0\n",
+    "                torch.save(NET.state_dict(),WEIGHTS_PATH[:-4]+\"_temp.pth\")\n",
     "\n",
     "    newTrainLoss = epochloss/(NB_TRAIN*NUM_SLICES)   #changed\n",
     "    print('The average loss of epoch ', epoch+1, ' is ', newTrainLoss)\n",
@@ -538,14 +533,25 @@
    "source": [
     "NB_SAMPLE_IMGS = 2\n",
     "plt.figure(figsize=(15, 4 * NB_SAMPLE_IMGS))\n",
+    "OFFSET = SLICE_WIDTH - 2 * STRIDE\n",
     "for i in range (NB_SAMPLE_IMGS):\n",
     "    x,y=DATA_VAL[i]\n",
     "    inputs = x.unsqueeze(0)\n",
-    "    inputs = Variable(inputs)\n",
-    "    if USE_GPU:\n",
-    "        inputs = inputs.cuda()\n",
+    "    outputs = torch.copy(inputs)\n",
     "    \n",
-    "    outputs = NET(inputs)\n",
+    "    labels_masked = reduce(labels.numpy(), ROAD_LABELS)\n",
+    "    labels = torch.from_numpy(labels_masked)\n",
+    "    for i in range (NUM_SLICES): #added\n",
+    "\n",
+    "            inputs_temp = inputs[:, :, :, i*STRIDE+OFFSET : (i+1)*STRIDE+OFFSET + SLICE_WIDTH]   ### added\n",
+    "            labels_temp = labels[:, :, i*STRIDE+OFFSET : (i+1)*STRIDE+OFFSET + SLICE_WIDTH]   ### added    \n",
+    "            \n",
+    "            if USE_GPU:\n",
+    "                inputs_temp = inputs_temp.cuda()    #changed\n",
+    "                labels_temp = labels_temp.cuda()    #changed    \n",
+    "                \n",
+    "            inputs_temp, labels_temp = Variable(inputs_temp), Variable(labels_temp) #changed\n",
+    "            outputs[:, :, :, i*STRIDE : i*STRIDE + SLICE_WIDTH]=NET(inputs_temp[:, :, :, i*STRIDE : i*STRIDE + SLICE_WIDTH])\n",
     "    _, preds = torch.max(outputs, 1)\n",
     "    pred = preds[0].data.cpu()\n",
     "    \n",
