add edge smoother function

--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -576,7 +576,9 @@
     "    _, preds = torch.max(outputs, 1)\n",
     "    pred = preds[0].cpu()\n",
     "    print(pred.shape)\n",
-    "    img, target = x.numpy(), y.numpy()\n",
+    "    img, target, pred = x.numpy(), y.numpy(), pred.numpy()\n",
+    "    pred = edge_smoother(reduce(target, ROAD_LABELS))\n",
+    "    #pred = edge_smoother(pred)\n",
     "    \n",
     "    \n",
     "    \n",
