removed traces from debugging
now it should work straight-away

--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -629,7 +629,7 @@
     "    # comparison\n",
     "    plt.subplot(NB_SAMPLE_IMGS, 4, i * 4 + 4)\n",
     "    plt.axis('off')\n",
-    "    comp = compare2(red, es)\n",
+    "    comp = compare(red, es)\n",
     "    plt.imshow(comp)\n",
     "    if i == 0:\n",
     "        plt.title(\"Target image\")\n",
