random shuffling of slices complete

--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -459,8 +459,9 @@
     "        labels_masked = reduce(labels.numpy(), ROAD_LABELS)\n",
     "        labels = torch.from_numpy(labels_masked)\n",
     "        \n",
-    "        for i in range (NUM_SLICES):   ### added         \n",
+    "        random_index =np.random.shuffle(np.arange(NUM_SLICES))\n",
     "        \n",
+    "        for i in random_index:   ### added         \n",
     "            inputs_temp = inputs[:, :, :, i*STRIDE : i*STRIDE + SLICE_WIDTH]   ### added\n",
     "            labels_temp = labels[:, :, i*STRIDE : i*STRIDE + SLICE_WIDTH]   ### added      \n",
     "            \n",
